# pyvuetify

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build-components.js  example.ipynb  noxfile.py  package-lock.json  package.json  pyproject.toml  toto.ipynb  vite.config.js
docs/: conf.py  index.rst  template_usage.rst
docs/_extension/: aknowledgement.py
docs/_static/: banner.html  custom.css
docs/autoapi/: index.rst
docs/component/: Alert.rst  App.rst  AppBar.rst  AppBarNavIcon.rst  Autocomplete.rst  Avatar.rst  Badge.rst  Banner.rst  BottomNavigation.rst  BottomSheet.rst  Breadcrumbs.rst  BreadcrumbsDivider.rst  BreadcrumbsItem.rst  Btn.rst  BtnToggle.rst  Calendar.rst  CalendarDaily.rst  CalendarMonthly.rst  CalendarWeekly.rst  Card.rst  CardActions.rst  CardSubtitle.rst  CardText.rst  CardTitle.rst  Carousel.rst  CarouselItem.rst  CarouselReverseTransition.rst  CarouselTransition.rst  Checkbox.rst  Chip.rst  ChipGroup.rst  Col.rst  ColorPicker.rst  ColorPickerCanvas.rst  ColorPickerSwatches.rst  Combobox.rst  Container.rst  Content.rst  Counter.rst  Data.rst  (+126 more)
docs/start/: advanced_usage.rst  index.rst  installation.rst  template_usage.rst  usage.rst
generate/: extension.py  generate_components.py  js_component.js.jinja  python_component.py.jinja  python_init.py.jinja  vue_component.vue.jinja  vuetify_api.json
generate_source/: add_component_docs.py  add_docs.py  add_mixin_docs.py  generate_schema.py  python.njk  vuetify_api.json
js/component/: VAlert.js  VAlert.vue  VAlertTitle.js  VAlertTitle.vue  VApp.js  VApp.vue  VAppBar.js  VAppBar.vue  VAppBarNavIcon.js  VAppBarNavIcon.vue  VAppBarTitle.js  VAppBarTitle.vue  VAutocomplete.js  VAutocomplete.vue  VAvatar.js  VAvatar.vue  VBadge.js  VBadge.vue  VBanner.js  VBanner.vue  VBannerActions.js  VBannerActions.vue  VBannerText.js  VBannerText.vue  (+362 more)
pyvuetify/: Alert.py  App.py  AppBar.py  AppBarNavIcon.py  Autocomplete.py  Avatar.py  Badge.py  Banner.py  BottomNavigation.py  BottomSheet.py  Breadcrumbs.py  __init__.py  alert.py
(+1635 files in other folders)
