[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvuetify"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"
description="interactive IPython widgets based on vuetify UI components"
classifiers=[
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"

[[project.authors]]
name = "Pierrick Rambaud"
email = "pierrick.rambaud40@gmail.com"

[project.urls]
repository = "https://github.com/pyvuetify/pyvuetify"

[dependency-groups]
dev = ["watchfiles", "jupyter", "jinja2", "jinja2-strcase", "marimo"]
docs = ["sphinx", "jupyter-sphinx", "ipykernel", "pydata-sphinx-theme", "sphinx-autoapi", "sphinx-design", "astroid>3", "sphinx-copybutton", "sphinx-last-updated-by-git"]

[tool.hatch.build]
only-packages = true
artifacts = ["pyvuetify/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["pyvuetify/static/widget.js"]
skip-if-exists = ["pyvuetify/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"

[tool.ruff]
ignore-init-module-imports = true
fix = true
exclude = [
    '.git',
    'dist',
    '.eggs',
    '**/node_modules',
    '**/generated',
]
ignore = [
    "E501", # line too long | Black take care of it
    #"W503", # line break before binary operator | Black takes care of it
    #"E203", # whitespace before ':' | Black take care of it
]
select = ["E", "W", "F", "Q", "I"]

[tool.black]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
scripts_are_modules = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true